--- a/NwGeoPrimitives/NwGeoPrimitives.csproj
+++ b/NwGeoPrimitives/NwGeoPrimitives.csproj
@@ -56,6 +56,7 @@
     <Compile Include="GeoPrimitives.cs" />
     <Compile Include="Main.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Util.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
