--- a/NwGeoPrimitives/NwGeoPrimitives.csproj
+++ b/NwGeoPrimitives/NwGeoPrimitives.csproj
@@ -53,7 +53,8 @@
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="GeoPrimitives.cs" />
+    <Compile Include="IterateModels.cs" />
+    <Compile Include="WalkPartition.cs" />
     <Compile Include="Main.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Util.cs" />
