--- a/NwGeoPrimitives/NwGeoPrimitives.csproj
+++ b/NwGeoPrimitives/NwGeoPrimitives.csproj
@@ -62,5 +62,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Util.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="PackageContents.xml" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
